<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StatisticsActivity"
    tools:showIn="@layout/activity_statistics">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/categoriesStatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="OnClickStatistics"
            android:gravity="center"
            android:text="@string/categories" />

        <Button
            android:id="@+id/daysStatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClickStatistics"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/days" />

        <Button
            android:id="@+id/personsStatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClickStatistics"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/persons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="@string/lastPurchases"
            android:textSize="18sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/purchaseRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>